--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,12 @@
 
 
 
-/** CSS FOR CAROUSEL **/
+#sec{
+    height: 450px;
+
+}
+
+
 
 
 
@@ -127,7 +132,6 @@ span a:hover{
 
 #bg-image{
     width: 100%;
-   
     height: 550px;
     overflow: hidden;
     position: relative;
