modified:   css/style.css 	modified:   index.html

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-
+span:hover{
+    color: yellow;
+}
 
 .navbar a:hover{
     color: skyblue;
@@ -169,4 +171,49 @@ span a:hover{
     {
         background-image: url(../image/6.jpg);
     }
+}
+
+
+
+
+
+
+
+
+
+
+
+.home-newsletter {
+    padding: 150px 0;
+}
+
+.home-newsletter .single {
+    max-width: 650px;
+    margin: 0 auto;
+    text-align: center;
+    position: relative;
+    z-index: 2;
+}
+
+.home-newsletter .single h2 {
+    font-size: 22px;
+    color: black;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+
+.home-newsletter .single .form-control {
+    height: 50px;
+    background: rgba(255, 255, 255, 0.6);
+    border-color: transparent;
+    border-radius: 20px 0 0 20px;
+}
+
+
+
+.home-newsletter .single .btn {
+    min-height: 50px;
+    border-radius: 0 20px 20px 0;
+    background: #243c4f;
+    color: #fff;
 }
